# AIV_TextGame

./: .gitignore  CMakeLists.txt  README.md
include/: IAttack.hpp  action.hpp  baseEntity.hpp  battle.hpp  character.hpp  combatState.hpp  combatant.hpp  controller.hpp  damageable.hpp  enemy.hpp  game.hpp  gameEventManager.hpp  randomGen.hpp  weapon.hpp
src/: main.cpp
src/game/: battle.cpp  character.cpp  combatState.cpp  combatant.cpp  controller.cpp  damageable.cpp  enemy.cpp  game.cpp  gameEventManager.cpp
